[gd_scene load_steps=5 format=3 uid="uid://bnx04k2b4f22r"]

[ext_resource type="Script" uid="uid://5pl4ull3trqv" path="res://telas/minigames/caca_bacterias/scenes/game_scene.gd" id="1_18ig4"]
[ext_resource type="Texture2D" uid="uid://b4aneik8mfme3" path="res://telas/minigames/caca_bacterias/assets/images/Fundo LAB.png" id="1_xy3my"]
[ext_resource type="Texture2D" uid="uid://csmk84qrs0yqg" path="res://telas/minigames/caca_bacterias/assets/images/UrsoClique.png" id="3_4jdoc"]
[ext_resource type="Theme" uid="uid://b511ckv5t4uuq" path="res://telas/interface/assets/temas/tema_padrao.tres" id="4_4jdoc"]

[node name="GameScene" type="Node2D"]
script = ExtResource("1_18ig4")

[node name="Sprite2D" type="TextureRect" parent="."]
offset_left = -383.92004
offset_top = -3.0517578e-05
offset_right = 640.07996
offset_bottom = 1013.09827
scale = Vector2(1.08, 1.0640625)
size_flags_horizontal = 4
size_flags_vertical = 3
texture = ExtResource("1_xy3my")

[node name="Ursinho" type="Sprite2D" parent="."]
position = Vector2(171, 934)
scale = Vector2(0.36899585, 0.33101857)
texture = ExtResource("3_4jdoc")

[node name="BacteriaContainer" type="Node2D" parent="."]

[node name="UI" type="CanvasLayer" parent="."]

[node name="InstrucaoLabel" type="Label" parent="UI"]
anchors_preset = -1
anchor_left = 0.029000001
anchor_right = 0.96800005
anchor_bottom = 0.119
offset_left = 0.11999893
offset_right = 0.039978027
offset_bottom = -0.5200043
grow_horizontal = 2
theme = ExtResource("4_4jdoc")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "\"\""
horizontal_alignment = 1
vertical_alignment = 1

[node name="MensagemLabel" type="Label" parent="UI"]
visible = false
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -23.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("4_4jdoc")
text = "\"\""

[node name="FatoLabel" type="Label" parent="UI"]
visible = false
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -23.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("4_4jdoc")
text = "\"\""
vertical_alignment = 2

[node name="CheckIcon" type="TextureRect" parent="UI"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 512.0
offset_top = 450.0
offset_right = -432.0
offset_bottom = -238.0
grow_horizontal = 2
grow_vertical = 2

[node name="Check" type="Label" parent="UI/CheckIcon"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme = ExtResource("4_4jdoc")
theme_override_font_sizes/font_size = 30
text = "Muito bem! ‚úÖ"
horizontal_alignment = 3

[node name="XIcon" type="TextureRect" parent="UI"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -944.0
offset_bottom = -688.0
grow_horizontal = 2
grow_vertical = 2

[node name="X" type="Label" parent="UI/XIcon"]
layout_mode = 0
offset_left = 512.0
offset_top = 450.0
offset_right = 552.0
offset_bottom = 473.0
theme = ExtResource("4_4jdoc")
theme_override_font_sizes/font_size = 30
text = "Ops! Bact√©ria Errada! ‚ùå"
horizontal_alignment = 3

[node name="JogarNovamente" type="Button" parent="UI"]
visible = false
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -212.0
offset_top = -68.0
offset_right = -43.0
offset_bottom = -37.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("4_4jdoc")
text = "üîÑ Jogar Novamente"

[node name="VoltarMenu" type="Button" parent="UI"]
visible = false
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 700.0
offset_top = -68.0
offset_right = 827.0
offset_bottom = -37.0
grow_vertical = 0
theme = ExtResource("4_4jdoc")
text = "Voltar ao Menu"

[node name="BacteriaSpawnTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[connection signal="pressed" from="UI/JogarNovamente" to="." method="_on_jogar_novamente_pressed"]
[connection signal="pressed" from="UI/VoltarMenu" to="." method="_on_voltar_menu_pressed"]
